--- a/index.html
+++ b/index.html
@@ -6,30 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Briana Davis - Web Developer</title>
     <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato&family=Schibsted+Grotesk&family=Space+Grotesk&display=swap"
+        rel="stylesheet">
+        <script src="https://kit.fontawesome.com/5fcb49cff4.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
     <!-- NAV BAR -->
-
-    <nav>
-        <div class="logo">
-            <img src="#" alt="">
-        </div>
-        <div class="navbar">
+    <header>
+        <nav class="navbar">
             <ul>
+                <li class="logo"><i class="fa-regular fa-circle"></i></li>
                 <li><a href="#">About</a></li>
-                <li><a href="">Projects</a></li>
-                <li><a href="">Contact</a></li>
-                <li>l/d theme button</li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Contact</a></li>
+                <li class="lightdarktheme"><i class="fa-solid fa-toggle-off"></i></li>
             </ul>
-        </div>
-    </nav>
+        </nav>
+    </header>
 
     <!-- MAIN -->
 
     <main>
-        <h1 class="title">I'm Briana Davis, Web Developer</h1>
+        <h1 class="title">I'm Briana Davis, Web Developer and <span class="rotatingtext">FILLERTEXT</span></h1>
         <p class="aboutme1"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut iure totam error quas
             explicabo saepe eveniet, incidunt esse, aliquam veritatis, officia id? Tempora voluptatibus quasi maiores
             dolor dolore quis sed?</p>
@@ -39,13 +43,15 @@
         <p class="aboutme3">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
     </main>
 
+
     <!-- FOOTER -->
 
     <footer>
         <div class="footerlinks">
             <ul>
-                <li><a href="#"><img src="#">linkedin</a></li>
-                <li><a href="#"><img src="#">github</a></li>
+                <li><a href="https://github.com/"><i class="fa-brands fa-github"></i></a></li>
+                <li><a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                <li><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
             </ul>
         </div>
     </footer>
