--- a/projects.html
+++ b/projects.html
@@ -22,10 +22,10 @@
         <nav class="navbar">
             <ul>
                 <li class="logo"><i class="fa-regular fa-circle"></i></li>
-                <li><a href="#">About</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><button class="lightDarkTheme"><i class="fa-solid fa-circle-half-stroke"></i></button></li>
+                <li class="lightDarkTheme"><i class="fa-solid fa-circle-half-stroke"></i></li>
             </ul>
         </nav>
     </header>
@@ -43,8 +43,8 @@
                 <img src="Images/360_F_505049883_5nNmMzKVfsZz9f5AAuJLKFduBjD6ft9e.jpeg" alt="Project">
             </div>
             <ul class="project-info">
-                <li class="project-title">Project Title</li>
-                <li class="project-description"> Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                <li class="project-title"><h3>Javascript Traffic Light</h3></li>
+                <li class="project-description"> An interactive traffic light made with Javascript.
                 </li>
             </ul>
         </section>
@@ -53,11 +53,11 @@
 
         <section class="project-grid-item">
             <div class="project-image">
-                <img src="Images/360_F_505049883_5nNmMzKVfsZz9f5AAuJLKFduBjD6ft9e.jpeg" alt="Project">
+                <img src="Images/Screen Shot 2023-08-07 at 12.45.38 pm.png" alt="Project">
             </div>
             <ul class="project-info">
-                <li class="project-title">Project Title</li>
-                <li class="project-description"> Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                <li class="project-title"><h3>Real Estate Website</h3></li>
+                <li class="project-description"> A mock up real estate website displaying utilising CSS grid.
                 </li>
             </ul>
         </section>
@@ -66,11 +66,11 @@
 
         <section class="project-grid-item">
             <div class="project-image">
-                <img src="Images/360_F_505049883_5nNmMzKVfsZz9f5AAuJLKFduBjD6ft9e.jpeg" alt="Project">
+                <img src="Images/Screen Shot 2023-08-07 at 12.53.51 pm.png" alt="Project">
             </div>
             <ul class="project-info">
-                <li class="project-title">Project Title</li>
-                <li class="project-description"> Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                <li class="project-title"><h3>To-Do List App</h3></li>
+                <li class="project-description"> A simple to-do list app.
                 </li>
             </ul>
         </section>
