--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Briana Davis - Web Developer</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./contact.css">
     <link rel="stylesheet" href="normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,10 +22,10 @@
         <nav class="navbar">
             <ul>
                 <li class="logo"><i class="fa-regular fa-circle"></i></li>
-                <li><a href="#">About</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><button class="lightDarkTheme"><i class="fa-solid fa-circle-half-stroke"></i></button></li>
+                <li class="lightDarkTheme"><i class="fa-solid fa-circle-half-stroke"></i></li>
             </ul>
         </nav>
     </header>
