--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -22,7 +22,6 @@
     <header>
         <nav class="navbar" id="myTopnav">
             <ul>
-                <li><a href="./about.html">About</a></li>
                 <li><a href="./projects.html">Projects</a></li>
                 <li><a href="./contact.html">Contact</a></li>
                 <li><a href="javascript:void(0);" class="icon" onclick="hamburgerMenu()">
@@ -38,7 +37,7 @@
         <h1 class="title">I'm Briana Davis, Junior Web Developer</h1>
         <p class="aboutme1"> Greetings! I'm a recently educated junior web developer eager to make my mark in the digital world. Armed with a solid foundation in web development principles and the latest coding languages, I'm excited to apply my newfound skills to create dynamic and user-friendly websites. My passion for problem-solving drives me to seek innovative solutions, and my commitment to continuous learning ensures that I'm always staying up-to-date with the ever-evolving landscape of web technologies.</p>
         <p class="aboutme2">My journey into web development was fueled by a desire to bridge creativity and functionality. Before venturing into coding, I explored various creative avenues, from design to music, that have shaped my well-rounded perspective. Now, as a junior web developer, I'm on a mission to blend my creative insights with technical expertise, crafting digital experiences that captivate and engage users. Join me as I embark on this exciting adventure, contributing my dedication, fresh ideas, and collaborative spirit to build meaningful and impactful online solutions.</p>
-        <p class="aboutme3"><a href="about.html">See more about me <i class="fa-solid fa-arrow-right fa-fade"
+        <p class="aboutme3"><a href="contact.html">Get in touch <i class="fa-solid fa-arrow-right fa-fade"
                     style="color: #000000;"></i></a></p>
     </main>
 
