--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -22,11 +22,12 @@
     <header>
         <nav class="navbar" id="myTopnav">
             <ul>
-                <li><a href="./projects.html">Projects</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-                <li><a href="javascript:void(0);" class="icon" onclick="hamburgerMenu()">
+                <li class="nav-item"><a href="./projects.html">Projects</a></li>
+                <li class="nav-item"><a href="./contact.html">Contact</a></li>
+                <li><a href="javascript:void(0);" class="hamburger-icon" onclick="hamburgerMenu()">
                         <i class="fa fa-bars"></i>
                     </a></li>
+                    <li class="nav-item"><button class="btn" onclick="darkTheme()"><i class="fa-solid fa-circle-half-stroke" alt="Toggle Light Dark Mode"></i></button></li>
             </ul>
         </nav>
     </header>
