--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>  
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Briana Davis - Web Developer</title>
+    <title>Briana Davis - Junior Web Developer</title>
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,41 +19,41 @@
 <body>
 
     <!-- NAV BAR -->
-    <header>
-        <nav class="navbar" id="myTopnav">
-            <ul>
-                <li class="nav-item"><a href="./projects.html">Projects</a></li>
-                <li class="nav-item"><a href="./contact.html">Contact</a></li>
-                <li><a href="javascript:void(0);" class="hamburger-icon" onclick="hamburgerMenu()">
-                        <i class="fa fa-bars"></i>
-                    </a></li>
-                    <li class="nav-item"><button class="btn" onclick="darkTheme()"><i class="fa-solid fa-circle-half-stroke" alt="Toggle Light Dark Mode"></i></button></li>
-            </ul>
-        </nav>
-    </header>
+    <nav>
+        <ul>
+            <li class="nav-item"><a href="./projects.html">Projects</a></li>
+            <li class="nav-item"><a href="./contact.html">Contact</a></li>
+            <li class="nav-item"><button class="btn" onclick="darkTheme()"><i class="fa-solid fa-circle-half-stroke"
+                        alt="Toggle Light Dark Mode"></i></button></li>
+        </ul>
+    </nav>
 
     <!-- MAIN -->
 
     <main>
-        <h1 class="title">I'm Briana Davis, Junior Web Developer</h1>
-        <p class="aboutme1"> Greetings! I'm a recently educated junior web developer eager to make my mark in the digital world. Armed with a solid foundation in web development principles and the latest coding languages, I'm excited to apply my newfound skills to create dynamic and user-friendly websites. My passion for problem-solving drives me to seek innovative solutions, and my commitment to continuous learning ensures that I'm always staying up-to-date with the ever-evolving landscape of web technologies.</p>
-        <p class="aboutme2">My journey into web development was fueled by a desire to bridge creativity and functionality. Before venturing into coding, I explored various creative avenues, from design to music, that have shaped my well-rounded perspective. Now, as a junior web developer, I'm on a mission to blend my creative insights with technical expertise, crafting digital experiences that captivate and engage users. Join me as I embark on this exciting adventure, contributing my dedication, fresh ideas, and collaborative spirit to build meaningful and impactful online solutions.</p>
+        <h1 class="maintitle">I'm Briana Davis, Junior Web Developer</h1>
+        <p class="aboutme1"> Hello! I'm a newly trained junior web developer eager to leave my mark in the digital
+            world. With a strong foundation in web development and the latest coding languages, I'm excited to apply my
+            skills to create dynamic, user-friendly websites. I'm passionate about solving problems and constantly
+            learning to keep up with evolving web technologies.</p>
+        <p class="aboutme2">My journey into web development is a fusion of creativity and functionality. Prior to
+            coding, I explored various creative avenues like design and music, shaping my well-rounded perspective. Now,
+            as a junior web developer, my mission is to combine creativity with technical expertise, crafting
+            captivating digital experiences. Join me on this adventure as I contribute dedication, fresh ideas, and a
+            collaborative spirit to build impactful online solutions.</p>
         <p class="aboutme3"><a href="contact.html">Get in touch <i class="fa-solid fa-arrow-right fa-fade"
-                    style="color: #000000;"></i></a></p>
+                    id="arrow"></i></a></p>
+        <ul class="social-links">
+            <li><a href="https://github.com/"><i class="fa-brands fa-github"></i></a></li>
+            <li><a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin-in"></i></a></li>
+            <li><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
+        </ul>
     </main>
 
 
     <!-- FOOTER -->
 
-    <footer>
-        <div class="footerlinks">
-            <ul>
-                <li><a href="https://github.com/"><i class="fa-brands fa-github"></i></a></li>
-                <li><a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                <li><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
-            </ul>
-        </div>
-    </footer>
+
 
 </body>
 
