--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
 <body>
 
-    <!-- NAV BAR -->
+    <!-- NAV -->
+
     <nav>
         <ul>
             <li class="nav-item"><a href="./projects.html">Projects</a></li>
@@ -49,11 +50,6 @@
             <li><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
         </ul>
     </main>
-
-
-    <!-- FOOTER -->
-
-
 
 </body>
 
